--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^8.1.0",
+    "mongoose": "^8.4.4",
+    "nodemon": "^3.1.4",
+    "react-router-dom": "^6.24.1",
     "zod": "^3.22.4"
   }
 }
